<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ttgantitg.androidinterviewapp.presentation.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_java"
            app:destination="@id/navigation_java" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_kotlin"
            app:destination="@id/navigation_kotlin" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_android"
            app:destination="@id/navigation_android" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_libs"
            app:destination="@id/navigation_libs" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_general"
            app:destination="@id/navigation_general" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ttgantitg.androidinterviewapp.presentation.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_java"
        android:name="com.ttgantitg.androidinterviewapp.presentation.home.java.JavaFragment"
        android:label="@string/java_questions"
        tools:layout="@layout/fragment_java" />

    <fragment
        android:id="@+id/navigation_kotlin"
        android:name="com.ttgantitg.androidinterviewapp.presentation.home.kotlin.KotlinFragment"
        android:label="@string/kotlin_questions"
        tools:layout="@layout/fragment_kotlin" />

    <fragment
        android:id="@+id/navigation_android"
        android:name="com.ttgantitg.androidinterviewapp.presentation.home.android.AndroidFragment"
        android:label="@string/android_questions"
        tools:layout="@layout/fragment_android" />

    <fragment
        android:id="@+id/navigation_libs"
        android:name="com.ttgantitg.androidinterviewapp.presentation.home.libs.LibsFragment"
        android:label="@string/libs_questions"
        tools:layout="@layout/fragment_libs" />

    <fragment
        android:id="@+id/navigation_general"
        android:name="com.ttgantitg.androidinterviewapp.presentation.home.general.GeneralFragment"
        android:label="@string/general_questions"
        tools:layout="@layout/fragment_general" />

</navigation>