<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/java_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:text="@string/java_btn"
            android:textColor="?attr/colorJavaText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_java"
            app:iconGravity="textStart"
            app:iconSize="30dp"
            app:iconTint="?attr/colorJavaText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/kotlin_button"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:text="@string/kotlin_btn"
            android:textColor="?attr/colorKotlinText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_kotlin"
            app:iconGravity="textStart"
            app:iconSize="24dp"
            app:iconTint="?attr/colorKotlinText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/java_button"
            app:layout_constraintBottom_toTopOf="@+id/android_button"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/android_button"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:text="@string/android_btn"
            android:textColor="?attr/colorAndroidText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_android"
            app:iconGravity="textStart"
            app:iconSize="24dp"
            app:iconTint="?attr/colorAndroidText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kotlin_button"
            app:layout_constraintBottom_toTopOf="@+id/libs_button"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/libs_button"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:text="@string/libs_btn"
            android:textColor="?attr/colorLibsText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/android_button"
            app:layout_constraintBottom_toTopOf="@+id/general_button"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/general_button"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:text="@string/general_btn"
            android:textColor="?attr/colorGeneralText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="5dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
